--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
     <string name="remaining_filament_label">Remaining filament (meter)</string>
     <string name="core_diameter_label">Hollow core diameter (mm)</string>
     <string name="core_diameter_hint">Enter hollow core diameter (mm)</string>
-    <string name="full_radius_label">Full radial distance (mm)</string>
-    <string name="full_radius_hint">Enter full radial distance (mm)</string>
-    <string name="empty_radius_label">Empty radial distance (mm)</string>
-    <string name="empty_radius_hint">Enter empty radial distance (mm)</string>
+    <string name="full_radius_label">Full winding thickness (mm)</string>
+    <string name="full_radius_hint">Enter full winding thickness (mm)</string>
+    <string name="empty_radius_label">Empty space thickness (mm)</string>
+    <string name="empty_radius_hint">Enter empty space thickness (mm)</string>
     <string name="slot_width_label">Wall-to-wall width (mm)</string>
     <string name="slot_width_hint">Enter wall-to-wall width (mm)</string>
     <string name="filament_diameter_label">Filament diameter (mm)</string>
